# llama-gguf-inference

./: .buildinfo  .checkmake  .checkmake-mk  .dockerignore  .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .gitmodules  .markdown-link-check.json  .pre-commit-config.yaml  .readthedocs.yml  .shellcheckrc  API_REFERENCE.html  AUTHENTICATION.html  CHANGELOG.md  CLAUDE.md  CONFIGURATION.html  CONTRIBUTING.md  DEBUGGING.md  DEPLOYMENT.html  Dockerfile  Dockerfile.cpu  LIVE_TESTING_GUIDE.html  MIGRATION.html  Makefile  README.md  REPO_MAP.md  SCALE_TO_ZERO.md  SECURITY_AUDIT.html  TESTING.html  TROUBLESHOOTING.html  api_keys.txt.example  docker-compose.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  (+4 more)
.claude/: CONTRACTS.md  GITHUB_INTEGRATION.md  GUIDELINES.md  PHASES.md  SPEC.md
.doctrees/: API_REFERENCE.doctree  AUTHENTICATION.doctree  CONFIGURATION.doctree  DEPLOYMENT.doctree  LIVE_TESTING_GUIDE.doctree  MIGRATION.doctree  SECURITY_AUDIT.doctree  TESTING.doctree  TROUBLESHOOTING.doctree  environment.pickle  index.doctree
.doctrees/auto/: ARCHITECTURE_AUTO.doctree  CHANGELOG.doctree  REPO_MAP.doctree  WORKFLOW_REGISTRY.doctree
.github/workflows/: build-docs.yml  cd.yml  ci.yml  code-quality.yml  docs-quality.yml  docs.yml  pr-validation.yml  publish.yml  release.yml  update-docs.yml  validate.yml
_modules/: auth.html  gateway.html  health_server.html  index.html
_sources/: AUTHENTICATION.md.txt  LIVE_TESTING_GUIDE.md.txt  MIGRATION.md.txt  SECURITY_AUDIT.md.txt  TROUBLESHOOTING.md.txt  index.rst.txt
_sources/auto/: ARCHITECTURE_AUTO.md.txt  CHANGELOG.md.txt  WORKFLOW_REGISTRY.md.txt
auto/: ARCHITECTURE_AUTO.html  CHANGELOG.html  REPO_MAP.html  WORKFLOW_REGISTRY.html
docs/: API_REFERENCE.md  ARCHITECTURE.md  AUTHENTICATION.md  CONFIGURATION.md  DEPLOYMENT.md  MIGRATION.md  SECURITY_AUDIT.md  TESTING.md  TROUBLESHOOTING.md  conf.py  configuration.md  index.rst  requirements.txt  troubleshooting.md
docs/_static/: .gitkeep
docs/_templates/: .gitkeep
docs/auto/: .gitkeep  ARCHITECTURE_AUTO.md  CHANGELOG.md  REPO_MAP.md  WORKFLOW_REGISTRY.md
scripts/: README.md  archive.sh  auth.py  benchmark.py  gateway.py  health_server.py  key_mgmt.py  start.sh
scripts/dev/: check_changelog.sh  check_env_completeness.sh  check_repo_map.sh  generate_api_docs.sh  setup.sh
scripts/diagnostics/: README.md  collect.sh
scripts/tests/: test_auth.sh  test_docker_integration.sh  test_health.sh  test_integration.sh  test_runner.sh
tests/: conftest.py  test_auth.py  test_benchmark.py  test_gateway.py  test_health_server.py  test_key_mgmt.py
